--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,29 +41,17 @@ jobs:
       with:
         ref: gh-pages
         path: gh-pages
-    - name: Run tests and generate Allure report
-      run: mvn clean test
-      if: always()
-      env:
-        ALLURE_RESULTS_FOLDER: target/allure-results
-      # Generate screenshot on test failure
-      - name: Generate screenshot on test failure
-        if: failure()
-        run: |
-          mkdir -p target/screenshots/
-          mvn io.github.bonigarcia:webdrivermanager-maven-plugin:latest:binaries -DoutputDirectory=$HOME/.m2/repository/webdriver
-          mvn com.github.webdriverextensions:webdriverextensions-maven-plugin:2.1.1:capture-screenshot -Dscreenshot.directory=target/screenshots/
-      # Attach screenshot to Allure report
-      - name: Attach screenshot to Allure report
-        if: failure()
-        run: |
-          mkdir -p target/allure-results
-          for file in target/screenshots/*.png; do allure generate $file --output target/allure-results --clean; done
+    - name: Generate screenshot on test failure
+      run: mvn -B allure:capture-screen
+      if: ${{ failure() }}
     - name: Test marketplace action
       uses: simple-elf/allure-report-action@master
       if: always()
+      #id: allure-report
       with:
         allure_results: target/allure-results
+        #gh_pages: gh-pages
+        #allure_report: allure-report
         allure_history: allure-history
     - name: Deploy report to Github Pages
       if: always()
